Stopgap, still cleaning up result refactor