@@ -49,6 +49,7 @@
                 <version>3.2.5</version>
                 <configuration>
                     <useModulePath>false</useModulePath>
+                    <argLine>--enable-preview</argLine>
                 </configuration>
             </plugin>
             <plugin>
